--- a/nbdev-env/docker-compose.yml
+++ b/nbdev-env/docker-compose.yml
@@ -6,7 +6,7 @@ x-default: &default
   build:
     context: .
     dockerfile: ./nbdev-env/Dockerfile
-  image: nbdev-env:python-3.10.5
+  image: nbdev-env:python-3.10.6
   logging:
     driver: json-file
     options:
@@ -62,4 +62,4 @@ volumes:
     driver_opts:
       type: "none"
       o: "bind"
-      device: "./nbdev-env/loper"
+      device: "${PWD}/nbdev-env/loper"
